# MedScribe

./: .env.example  .gitignore  README.md  docker-compose.monitoring.yml  docker-compose.yml  start.bat  start.ps1  stop.ps1
server/: .coveragerc  .dockerignore  .env.example  Dockerfile  QUICK_START_TESTING.md  TESTING_GUIDE.md  TEST_SUITE_SUMMARY.md  config.yaml  main.py  pyproject.toml  pytest.ini  requirements.docker.txt  requirements.txt  requirements_new.txt  run_tests.py  setup_database.md  test.bat
server/app/: logging.py  monitoring.py
server/app/agents/: Agents.md  InteractionExamples.md  config.py  graph.py  report_styles.css  report_template.html  state.py  summarizer.py  tool_universe.yaml  validation_contracts.py
server/app/agents/guardrails/: __init__.py  budget.py  (+1 more)
server/app/api/: dependencies.py  schemas.py
server/app/auth/: oauth2.py
server/app/config/: settings.py
server/app/core/: __init__.py  clinical_suggestions.py  dosage_calculator.py  drug_database_client.py  lab_interpreter.py  patient_model.py  patient_service.py  pipeline_progress.py  post_processor.py  record_generator.py  workflow_engine.py
server/app/database/: base.py  models.py  session.py
server/app/models/: llm.py  llm_providers.py  registry.py  sst.py
server/app/services/: __init__.py  assistant_service.py  embedding_service.py  export_service.py  hybrid_retrieval.py  iterative_retrieval.py  locator.py  models.py  session_service.py  transcription_service.py
server/app/storage/: base.py  local.py
server/migrations/: env.py
server/migrations/versions/: 000_initial.py  001_add_embedding_tables.py  002_add_tsvector_gin_indexes.py  003_nullable_session_patient.py
server/scripts/: check_database.py  init_database.py  seed_data.py
server/templates/: consultation.html  discharge.html  progress.html  soap.html
server/tests/: COMPLETE_TEST_SUITE_STATUS.md  README.md  __init__.py  conftest.py  helpers.py  smoke_test.py  test_config.py  test_conversation.py  test_extract_candidates.py  test_ocr_documents.py  test_package_outputs.py  test_record_and_note.py  test_services.py  test_tools.py  test_validation_and_resolution.py  validate_test_setup.py
server/tests/ocr_result/: Doctor's Handwriting.json  Doctor's Handwriting.txt  discarhege_text_test.json  discarhege_text_test.txt  img-sample-consolidated-medical-record-summ.json  img-sample-consolidated-medical-record-summ.txt  img-sample-index-report-1.json  img-sample-index-report-1.txt  img-sample-legal-summary-w-hyperlinks.json  img-sample-legal-summary-w-hyperlinks.txt  table_test.json  table_test.txt
server/tests/unit/: __init__.py  test_api_clinical.py  test_api_records.py  test_clinical_suggestions.py  test_clinical_suggestions_node.py  test_db_persistence.py  test_diagnostic_intelligence.py  test_human_review_gate.py  test_normalize_transcript.py  test_ocr_pipeline.py  test_patient_model.py  test_patient_service.py  test_pipeline_progress.py  test_rag_enhancements.py  test_record_generator.py  test_retrieve_evidence.py  test_segment_and_chunk.py  test_session_persistence.py  test_workflow_engine.py
(+188 files in other folders)
